--- a/flutter_test_1/pubspec.yaml
+++ b/flutter_test_1/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
+  # Minimal Weather App 을 위한 패키지 설치 24.04.04
+  http: ^1.2.1
+  geolocator: ^11.0.0
+  geocoding: ^3.0.0
+  lottie: ^3.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
