--- a/flutter_test_1/android/app/src/main/AndroidManifest.xml
+++ b/flutter_test_1/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 위치권한허용 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 위치권한허용 -->
     <application
         android:label="Get your Umbrella"
         android:name="${applicationName}"
