--- a/flutter_test_1/pubspec.yaml
+++ b/flutter_test_1/pubspec.yaml
@@ -36,11 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
+
   # Minimal Weather App 을 위한 패키지 설치 24.04.04
+  # jdk 1.8 => jdk 11 후 패키지 설치 오류있어서 재설치 24.04.08
   http: ^1.2.1
   geolocator: ^11.0.0
   geocoding: ^3.0.0
   lottie: ^3.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -68,8 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
